--- a/timing.html
+++ b/timing.html
@@ -72,7 +72,7 @@
         </p>
         
         <hr>
-        <p>16进制数据</p>
+        <p>上述表格对应 16 进制数据</p>
         <p>{{generateHexCommand}}</p>
 
         <hr>
