Update: 定时数据解析界面增加秒数的支持

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <h2>Tool box</h2>
             <a href="light.html" class="btn btn-default">球泡灯灯柱图层算法</a>
             <a href="timing.html" class="btn btn-default">设备定时数据解析生成</a>
+            <a href="color_preview.html" class="btn btn-default">颜色预览</a>
         <hr>
     </div>
 
