Update: 优化定时算法解析界面 week-repeat 列宽度

--- a/timing.html
+++ b/timing.html
@@ -24,7 +24,7 @@
                 <tr>
                     <td>index</td>
                     <td>enable</td>
-                    <td>week-repeat</td>
+                    <td style="width: 104px;">week-repeat</td>
 
                     <td class="background-color">t0 enable</td>
                     <td class="background-color">t0 switch</td>
